appId: host.exp.exponent
---
- launchApp
- tapOn: "mobile"
- assertVisible: "Lotteries 🎰"
- assertVisible: "Filter lotteries"
